# crosstalk-evaluation

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
assets/: lemon-info.fif  plots.mplstyle
matlab/: fetch_clean_data.m  make_trial_selection.m  mkdir_if_not_exists.m  rift_save_epochs.m
paper/: authors.tex  main.bib  main.tex  supplementary.tex
paper/numbers/: combined.tex  numbers_main.tex  numbers_supplementary.tex
paper/sections/: 00_abstract.tex  01_introduction.tex  02_theory.tex  03_methods.tex  04_results.tex  05_discussion.tex  06_conclusion.tex  07_statements.tex  08_supplementary.tex
paper/supplementary/: A_literature_review.tex  B_theory_appendix.tex  C_simulation_appendix.tex  D_rfs_models.tex  E_additional_figures.tex
scripts/00_prepare/: 00_init_workspace.py  01_prepare_head_model.py  02_infer_params_subject.py  03_infer_params_ga.py  04_source_depth_orientations.py
scripts/01_example_activity/: 01_minimal_example.py
scripts/02_ctf_ratio/: 01_ctf_ratio_vs_parcellations.py  02_ctf_ratio_vs_sensors.py
scripts/03_experiments/: 00_simulate.py  01_evaluate_sim_label.py  02_evaluate_sim_combined.py  03_evaluate_theory.py  04_comparison.py  05_combine_results.py
scripts/04_spurious_coherence/: 01_permutations_subject.py  02_permutations_ga.py  03_theory.py  (+1 more)
tests/: test_assets.py  test_config.py  test_connectivity.py  test_ctf.py  test_datasets.py  test_evaluate.py  test_extraction.py  test_io.py  test_metrics.py  test_parcellations.py  test_permutation.py  test_prepare.py  test_simulations.py  test_tex.py  test_utils.py  test_viz_utils.py
workflow/: Snakefile  examples.smk  experiments.smk  figures.smk  numbers.smk  prepare.smk  rift.smk  simulations.smk  spurious_coherence.smk  theory.smk
(+56 files in other folders)
